refactor: 코드 리뷰 반영
- 정규 표현식 validation 추가