@@ -1,15 +1,19 @@
 package step1.domain;
 
+import org.apache.commons.lang3.StringUtils;
 import step1.exception.EmptyStringException;
+import step1.exception.InvalidRegexException;
 
 import java.util.Arrays;
 import java.util.LinkedList;
 import java.util.function.Predicate;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 public class Seperator {
 
     private static final String DELIMITER = " ";
+    private static final String REGEX = "^[0-9]+(\\s*[-+*/]\\s*[0-9]+)*$";
 
     private final String[] splited;
 
@@ -19,8 +23,19 @@ public class Seperator {
     }
 
     private void validate(String text) {
-        if (text.isBlank()) {
+        validateBlank(text);
+        validateRegex(text);
+    }
+
+    private static void validateBlank(String text) {
+        if (StringUtils.isBlank(text)) {
             throw new EmptyStringException();
+        }
+    }
+
+    private static void validateRegex(String text) {
+        if (!Pattern.matches(REGEX, text)) {
+            throw new InvalidRegexException();
         }
     }
 
